# QtComponents

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  QtComponentsInPractice.sln
EmbeddedWidget/: CMakeLists.txt  embedded_widget.cpp  embedded_widget.h  main.cpp  window_finder_win.cpp  window_finder_win.h
Explorer/: Explorer.vcxproj  Explorer.vcxproj.filters  explorer.cpp  explorer.h  main.cpp
ProjectExplorer/: CMakeLists.txt  main.cpp  project_explorer.cpp  project_explorer.h
ToolBar/: CMakeLists.txt  README.md  ToolBar.vcxproj  ToolBar.vcxproj.filters  main.cpp  resources.qrc  tool_bar.cpp  tool_bar.h  tool_bar.ui
demo/: CMakeLists.txt  main.cpp
lib/: pc_widgets.lib
src/: CMakeLists.txt  pc_widgets_global.h  resources.qrc
src/embedded_widget/: README.md  embedded_widget.cpp  embedded_widget.h  i_window_finder.cpp  i_window_finder.h  window_finder_win.cpp  window_finder_win.h
src/project_explorer/: project_explorer.cpp  project_explorer.h
